update Cashier