@@ -11,18 +11,10 @@ public class ClearScreen {
             String operatingSystem = System.getProperty("os.name"); // Check the current operating system
             System.out.println("Operating System: " + operatingSystem);
             if (operatingSystem.contains("Windows")) {
-                // ProcessBuilder pb = new ProcessBuilder("cmd", "/c", "cls");
-                ProcessBuilder pb = new ProcessBuilder("cls");
-                // Process startProcess = pb.inheritIO.start();
-                Process startProcess = pb.inheritIO().start();
-
-                // Process startProcess = Runtime.getRuntime().exec("cls");
-                startProcess.waitFor();
+                new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
             } else {
                 ProcessBuilder pb = new ProcessBuilder("clear");
-                // Process startProcess = pb.inheritIO.start();
                 Process startProcess = pb.inheritIO().start();
-
                 startProcess.waitFor();
             }
         } catch (Exception e) {
